src/objects/Sighten_Credit_Approval__c.object
<CustomObject>
    <description>A junction object that is updated by Sighten with the credit approval status of a contact, property, and lease fund.</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sighten Credit Approvals</relationshipLabel>
        <relationshipName>Sighten_Credit_Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <picklist>
            <picklistValues>
                <fullName>INITIATED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUBMITTED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPROVED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXPIRED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONDITIONAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERROR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRAUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANUAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lease_Fund__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Lease Fund</label>
        <referenceTo>Lease_Fund__c</referenceTo>
        <relationshipLabel>Sighten Credit Approvals</relationshipLabel>
        <relationshipName>Sighten_Credit_Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Owner_Email__c</fullName>
        <label>Property Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Sighten Credit Approvals</relationshipLabel>
        <relationshipName>Sighten_Credit_Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sighten_Qualification_uuid__c</fullName>
        <description>Contains the uuid for the qualification in the Sighten system</description>
        <externalId>true</externalId>
        <inlineHelpText>Contains the uuid for the qualification in the Sighten system</inlineHelpText>
        <label>Sighten Qualification uuid</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Sighten Credit Approval</label>
    <nameField>
        <displayFormat>SCA-{000000}</displayFormat>
        <label>Sighten Credit Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sighten Credit Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>